--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="user; else loading">
+    <img [src]="user.photo ? user.photo : 'assets/user-image-placeholder.jpg'" alt="User Photo" class="user-image">
     <h2>{{ user.name }}</h2>
     <p>Email: {{ user.email }}</p>
-    <img [src]="user.photo" *ngIf="user.photo">
     <p>Joined: {{ user.dateCreated | date: 'longDate' }}</p>
 </div>
 <ng-template #loading><p>Loading...</p></ng-template>
