--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -2,6 +2,14 @@
     <img [src]="user.photo ? user.photo : 'assets/user-image-placeholder.jpg'" alt="User Photo" class="user-image">
     <h2>{{ user.name }}</h2>
     <p>Email: {{ user.email }}</p>
-    <p>Joined: {{ user.dateCreated | date: 'longDate' }}</p>
+    <p>Start date: {{ user.dateCreated | date: 'longDate' }}</p>
+    <button (click)="toggleModal(true)" class="btn btn-primary">Edit Details</button>
 </div>
 <ng-template #loading><p>Loading...</p></ng-template>
+
+<div class="modal" *ngIf="isModalOpen">
+    <div class="modal-content">
+      <span class="close" (click)="toggleModal(false)">&times;</span>
+      <app-user-profile-edit [user]="user" (updateUser)="handleUpdate($event)"></app-user-profile-edit>
+    </div>
+</div>
