--- a/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.css
@@ -5,7 +5,7 @@ body, html {
     background: linear-gradient(to right, #ff512f, #dd2476);
 }
 
-.login-container, .user-profile-container {
+.user-profile-container {
     display: flex;
     justify-content: center;
     align-items: center;
