--- a/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
@@ -9,8 +9,8 @@
       <input type="email" formControlName="email" id="email" placeholder="Enter email" class="form-control">
     </div>
     <div class="form-group">
-      <label for="photo">Profile picture</label>
-      <input type="text" formControlName="photo" id="photo" placeholder="Attach a photo" class="form-control">
+        <label for="photo">Upload Photo</label>
+        <input type="file" (change)="onFileChange($event)" id="photo" class="form-control">
     </div>
     <button type="submit" class="btn btn-primary">Save Changes</button>
 </form>
