--- a/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
@@ -9,6 +9,10 @@
       <input type="email" formControlName="email" id="email" placeholder="Enter email" class="form-control">
     </div>
     <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" formControlName="password" id="password" placeholder="Enter password" class="form-control">
+    </div>
+    <div class="form-group">
         <label for="photo">Upload Photo</label>
         <input type="file" (change)="onFileChange($event)" id="photo" class="form-control">
     </div>
