--- a/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/edit/user-profile-edit.component.html
@@ -16,5 +16,9 @@
         <label for="photo">Upload Photo</label>
         <input type="file" (change)="onFileChange($event)" id="photo" class="form-control">
     </div>
-    <button type="submit" class="btn btn-primary">Save Changes</button>
+    <!-- <button type="submit" class="btn btn-primary">Save Changes</button> -->
+
+    <mat-dialog-actions>
+      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
+    </mat-dialog-actions>
 </form>
