--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -1,8 +1,10 @@
-<div *ngIf="user; else loading">
-    <img [src]="photoUrlPath ? photoUrlPath : 'assets/user-image-placeholder.jpg'" alt="User Photo" class="user-image">
-    <h2>{{ user.name }}</h2>
-    <p>Email: {{ user.email }}</p>
-    <p>Start date: {{ user.dateCreated | date: 'longDate' }}</p>
-    <button mat-raised-button (click)="openDialog()" class="btn btn-primary">Edit Details</button>
+<div class="user-profile-outline-div">
+    <div *ngIf="user; else loading">
+        <img [src]="photoUrlPath ? photoUrlPath : 'assets/user-image-placeholder.jpg'" alt="User Photo" class="user-image">
+        <h2>{{ user.name }}</h2>
+        <p>Email: {{ user.email }}</p>
+        <p>Start date: {{ user.dateCreated | date: 'longDate' }}</p>
+        <button mat-raised-button (click)="openDialog()" class="btn btn-primary">Edit Details</button>
+    </div>
+    <ng-template #loading><p>Loading...</p></ng-template>
 </div>
-<ng-template #loading><p>Loading...</p></ng-template>
