make it full circle

--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.css
@@ -1,7 +1,8 @@
 .user-image {
-    width: 10%;
-    height: auto;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .user-profile-outline-div {
