--- a/frontend-fit-tracker/src/app/app.component.html
+++ b/frontend-fit-tracker/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Navbar goes here</h1>
 
 <router-outlet></router-outlet>
-<h1>Footer goes here at bottom of page</h1>
+<app-footer></app-footer>
