--- a/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
+++ b/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
@@ -3,6 +3,6 @@
     <div class="navbar-links">
       <a routerLink="/" routerLinkActive="active">Home</a>
       <a routerLink="/profile" routerLinkActive="active">User Profile</a>
-      <a routerLink="/exercises" routerLinkActive="active">Exercises</a>
+      <a routerLink="/log-activity" routerLinkActive="active">Log Activity</a>
     </div>
 </nav>
