--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -3,9 +3,9 @@
 
         <div class="user-details-div">
             <img [src]="photoUrlPath ? photoUrlPath : 'assets/user-image-placeholder.jpg'" alt="User Photo" class="user-image">
-            <h2>{{ user.name }}</h2>
-            <p>Email: {{ user.email }}</p>
-            <p>Start date: {{ user.dateCreated | date: 'longDate' }}</p>
+            <h1>{{ user.name }}</h1>
+            <h3>Email: {{ user.email }}</h3>
+            <h3>Start date: {{ user.dateCreated | date: 'longDate' }}</h3>
             <button mat-raised-button (click)="openDialog()" class="btn btn-primary">Edit Details</button>
         </div>
 
