--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -6,7 +6,9 @@
             <h1>{{ user.name }}</h1>
             <h3>Email: {{ user.email }}</h3>
             <h3>Start date: {{ user.dateCreated | date: 'longDate' }}</h3>
-            <button mat-raised-button (click)="openDialog()" class="btn btn-primary">Edit Details</button>
+            <h3>Goals accomplished: [placeholder for later]</h3>
+            <button mat-raised-button (click)="openDialog()" class="btn btn-primary">bring to top rightEdit Details</button>
+            <button mat-raised-button (click)="openDialog()" class="btn btn-primary">bring to top rightEdit Details</button>
         </div>
 
         <div class="goals-div">  
