--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -2,15 +2,15 @@
 and view more details. Include functionality to edit goals directly from
 this dashboard.
 Add New Goal: Button or link prominently displayed to encourage new goal setting. -->
-<div *ngFor="let goal of longTermGoals">
-    <mat-card tabindex="0" class="">
+<div *ngFor="let goal of shortTermGoals">
+    <mat-card tabindex="0" class="short-term-goal-card">
         <mat-card-content>{{ goal.text }}</mat-card-content>
         <mat-card-content>{{ goal.deadline }}</mat-card-content>
     </mat-card>
 </div>
 
-<div *ngFor="let goal of shortTermGoals">
-    <mat-card tabindex="0">
+<div *ngFor="let goal of longTermGoals">
+    <mat-card tabindex="0" class="long-term-goal-card">
         <mat-card-content>{{ goal.text }}</mat-card-content>
         <mat-card-content>{{ goal.deadline }}</mat-card-content>
     </mat-card>
