update goal cards

--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.css
@@ -1,40 +1,38 @@
 .goals-title {
-   text-align: left; 
-   margin-left: 10px;
+    text-align: left; 
+    margin-left: 15px;
 }
 
 .goal-cards-container {
     display: flex;
-    flex-wrap: wrap;  /* Ensures items can wrap onto the next line */
-    justify-content: flex-start;  /* Aligns items to the start of the container */
-    padding: 10px;  /* Reduced padding for more space */
-    gap: 20px;  /* Provides consistent spacing between items */
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 15px;
+    gap: 25px;
 }
 
-.short-term-goal-card, .long-term-goal-card {
-    height: 140px;
-    width: 140px;
+.goal-card {
+    position: relative;
+    height: 150px;
+    width: 150px;
     border: 2px solid;
     box-shadow: none;
-    display: flex;
 }
 
 .short-term-goal-card {
     border-color: #FFCC99;
-    box-shadow: none;
 }
 
 .long-term-goal-card {
     border-color: #99CC99;
-    box-shadow: none;
 }
 
 @media (max-width: 600px) {
     .goals-container {
-      justify-content: center; /* Center cards when they stack vertically */
+        justify-content: center;
     }
     .goal-card {
-      width: 100%; /* Full width cards for better mobile visibility */
-      margin-bottom: 10px; /* Reduce space between stacked cards on small screens */
+        width: 100%;
+        margin-bottom: 10px;
     }
 }
