--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -7,7 +7,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
     <div class="goal-cards-container">
         <div *ngFor="let goal of shortTermGoals">
             <mat-card tabindex="0" class="short-term-goal-card goal-card">
-                <mat-card-content>{{ goal.text }}</mat-card-content>
+                <mat-card-content>{{ goal.title }}</mat-card-content>
+                <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
             </mat-card>
         </div>
@@ -16,7 +17,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
     <div class="goal-cards-container">
         <div *ngFor="let goal of longTermGoals">
             <mat-card tabindex="0" class="long-term-goal-card goal-card">
-                <mat-card-content>{{ goal.text }}</mat-card-content>
+                <mat-card-content>{{ goal.title }}</mat-card-content>
+                <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
             </mat-card>
         </div>
