made them buttons

--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -10,8 +10,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
                 <mat-card-content>{{ goal.title }}</mat-card-content>
                 <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
-                <mat-icon aria-label="Check">done</mat-icon>
-                <mat-icon aria-label="Edit">edit</mat-icon>
+                <mat-icon aria-label="Check" style="cursor: pointer;" (click)="goalCompleted()">done</mat-icon>
+                <mat-icon aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal()">edit</mat-icon>
             </mat-card>
         </div>
     </div>
@@ -22,8 +22,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
                 <mat-card-content>{{ goal.title }}</mat-card-content>
                 <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
-                <mat-icon aria-label="Check">done</mat-icon>
-                <mat-icon aria-label="Edit">edit</mat-icon>
+                <mat-icon aria-label="Check" style="cursor: pointer;" (click)="goalCompleted()">done</mat-icon>
+                <mat-icon aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal()">edit</mat-icon>
             </mat-card>
         </div>
     </div>
