--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -11,8 +11,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
                 <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
                 <div class="goals-buttons-div">
-                    <mat-icon class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted()">done</mat-icon>
-                    <mat-icon class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal()">edit</mat-icon>
+                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
+                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
                 </div>
             </mat-card>
         </div>
@@ -25,8 +25,8 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
                 <mat-card-content>{{ goal.notes }}</mat-card-content>
                 <mat-card-content>{{ goal.deadline }}</mat-card-content>
                 <div class="goals-buttons-div">
-                    <mat-icon class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted()">done</mat-icon>
-                    <mat-icon class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal()">edit</mat-icon>
+                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
+                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
                 </div>
             </mat-card>
         </div>
