--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
@@ -1,1 +1,18 @@
-<p>edit-goal works!</p>
+<form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
+    <h2>Edit Goal</h2>
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" formControlName="title" id="title" placeholder="Enter title of goal" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="notes">Notes</label>
+      <input type="notes" formControlName="notes" id="notes" placeholder="Enter notes" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="deadline">Deadline</label>
+        <input type="deadline" formControlName="deadline" id="deadline" placeholder="Enter deadline" class="form-control">
+    </div>
+    <mat-dialog-actions>
+      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
+    </mat-dialog-actions>
+</form>
