--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
@@ -6,12 +6,11 @@
     </div>
     <div class="form-group">
       <label for="notes">Notes</label>
-      <input type="notes" formControlName="notes" id="notes" placeholder="Enter notes" class="form-control">
+      <textarea formControlName="notes" id="notes" placeholder="Enter notes" class="form-control"></textarea>
     </div>
     <div class="form-group">
         <label for="deadline">Deadline</label>
-        <input type="deadline" formControlName="deadline" id="deadline" placeholder="Enter deadline" class="form-control">
-    </div>
+        <input type="date" formControlName="deadline" id="deadline" class="form-control">    </div>
     <mat-dialog-actions>
       <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
     </mat-dialog-actions>
