--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -7,9 +7,11 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
     <div class="goal-cards-container">
         <div *ngFor="let goal of shortTermGoals">
             <mat-card tabindex="0" class="short-term-goal-card goal-card">
-                <mat-card-content>{{ goal.title }}</mat-card-content>
-                <mat-card-content>{{ goal.notes }}</mat-card-content>
-                <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                <div [id]="goal.id" (click)="openGoalViewModal($event)" style="cursor: pointer;">
+                    <mat-card-content>{{ goal.title }}</mat-card-content>
+                    <mat-card-content>{{ goal.notes }}</mat-card-content>
+                    <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                </div>
                 <div class="goals-buttons-div">
                     <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
                     <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
@@ -21,9 +23,11 @@ Add New Goal: Button or link prominently displayed to encourage new goal setting
     <div class="goal-cards-container">
         <div *ngFor="let goal of longTermGoals">
             <mat-card tabindex="0" class="long-term-goal-card goal-card">
-                <mat-card-content>{{ goal.title }}</mat-card-content>
-                <mat-card-content>{{ goal.notes }}</mat-card-content>
-                <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                <div [id]="goal.id" (click)="openGoalViewModal($event)" style="cursor: pointer;">
+                    <mat-card-content>{{ goal.title }}</mat-card-content>
+                    <mat-card-content>{{ goal.notes }}</mat-card-content>
+                    <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                </div>
                 <div class="goals-buttons-div">
                     <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
                     <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
