detail modal has info

--- a/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
@@ -1,1 +1,6 @@
-<p>goal-modal works!</p>
+<h1>{{ goal.title }}</h1>
+<p><strong>Deadline:</strong> {{ goal.deadline }}</p>
+<p><strong>Notes:</strong> {{ goal.notes }}</p>
+<div mat-dialog-actions>
+  <button mat-button (click)="closeDialog()">Close</button>
+</div>
