--- a/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
@@ -1,6 +1,15 @@
-<h1>{{ goal.title }}</h1>
+<!-- <h1>{{ goal.title }}</h1>
 <p><strong>Deadline:</strong> {{ goal.deadline }}</p>
 <p><strong>Notes:</strong> {{ goal.notes }}</p>
 <div mat-dialog-actions>
   <button mat-button (click)="closeDialog()">Close</button>
-</div>
+</div> -->
+
+<mat-dialog-content class="goal-detail-modal">
+    <h1>{{ goal.title }}</h1>
+    <p><strong>Deadline:</strong> {{ goal.deadline }}</p>
+    <p><strong>Notes:</strong> {{ goal.notes }}</p>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button (click)="closeDialog()">Close</button>
+</mat-dialog-actions>
