--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.css
@@ -42,6 +42,13 @@
     margin-bottom: 5px;
 }
 
+.truncate-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 250px; /* Adjust based on your layout */
+}
+
 @media (max-width: 600px) {
     .goals-container {
         justify-content: center;
