--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -7,7 +7,7 @@
                     <mat-card-content class="truncate-text">{{ goal.title }}</mat-card-content>
                     <br/>
                     <mat-card-content class="truncate-text">{{ goal.notes }}</mat-card-content>
-                    <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                    <mat-card-content>{{ goal.deadline | date }}</mat-card-content>
                 </div>
                 <div class="goals-buttons-div">
                     <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
@@ -24,7 +24,7 @@
                     <mat-card-content class="truncate-text">{{ goal.title }}</mat-card-content>
                     <br/>
                     <mat-card-content class="truncate-text">{{ goal.notes }}</mat-card-content>
-                    <mat-card-content>{{ goal.deadline }}</mat-card-content>
+                    <mat-card-content>{{ goal.deadline | date }}</mat-card-content>
                 </div>
                 <div class="goals-buttons-div">
                     <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
