--- a/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goal-detail-modal/goal-detail-modal.component.html
@@ -7,7 +7,7 @@
 
 <mat-dialog-content class="goal-detail-modal">
     <h1>{{ goal.title }}</h1>
-    <p><strong>Deadline:</strong> {{ goal.deadline }}</p>
+    <p><strong>Deadline:</strong> {{ goal.deadline | date }}</p>
     <p><strong>Notes:</strong> {{ goal.notes }}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
