--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
@@ -9,8 +9,9 @@
       <textarea formControlName="notes" id="notes" placeholder="Enter notes" class="form-control"></textarea>
     </div>
     <div class="form-group">
-        <label for="deadline">Deadline</label>
-        <input type="date" formControlName="deadline" id="deadline" class="form-control">    </div>
+      <label for="deadline">Deadline</label>
+      <input type="date" formControlName="deadline" id="deadline" class="form-control">
+    </div>
     <mat-dialog-actions>
       <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
     </mat-dialog-actions>
