reminder for myself when i increment bcrypt

--- a/frontend-fit-tracker/src/app/login/login.component.html
+++ b/frontend-fit-tracker/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login-container">
+  <span>email: john.doe&#64;example.com password: hash123</span>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <h2>Login</h2>
       <div class="form-group">
