--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -1,5 +1,6 @@
 <div class="goals-container">
     <h1 class="goals-title">My Goals</h1>
+    <button>create goal button goes to the left of "My Goals" title</button>
     <div class="goal-cards-container">
         <div *ngFor="let goal of shortTermGoals">
             <mat-card tabindex="0" class="short-term-goal-card goal-card">
