--- a/frontend-fit-tracker/src/app/user-profile/goals/complete-goal/complete-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/complete-goal/complete-goal.component.html
@@ -1,1 +1,7 @@
-<p>complete-goal works!</p>
+<div mat-dialog-content>
+    <p>Did you complete this goal?</p>
+  </div>
+  <div mat-dialog-actions class="flex-actions" align="end">
+    <button mat-button [mat-dialog-close]="true">Yes</button>
+    <button mat-button [mat-dialog-close]="false">No</button>
+</div>
