--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -4,15 +4,15 @@
     <div class="goal-cards-container">
         <div *ngFor="let goal of shortTermGoals">
             <mat-card tabindex="0" class="short-term-goal-card goal-card">
-                <div [id]="goal.id" (click)="openGoalViewModal($event)" style="cursor: pointer;">
+                <div [id]="goal.id" (click)="openGoalViewModal(goal)" style="cursor: pointer;">
                     <mat-card-content class="truncate-text">{{ goal.title }}</mat-card-content>
                     <br/>
                     <mat-card-content class="truncate-text">{{ goal.notes }}</mat-card-content>
                     <mat-card-content>{{ goal.deadline | date }}</mat-card-content>
                 </div>
                 <div class="goals-buttons-div">
-                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
-                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
+                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted(goal)">done</mat-icon>
+                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal(goal)">edit</mat-icon>
                 </div>
             </mat-card>
         </div>
@@ -21,15 +21,15 @@
     <div class="goal-cards-container">
         <div *ngFor="let goal of longTermGoals">
             <mat-card tabindex="0" class="long-term-goal-card goal-card">
-                <div [id]="goal.id" (click)="openGoalViewModal($event)" style="cursor: pointer;">
+                <div [id]="goal.id" (click)="openGoalViewModal(goal)" style="cursor: pointer;">
                     <mat-card-content class="truncate-text">{{ goal.title }}</mat-card-content>
                     <br/>
                     <mat-card-content class="truncate-text">{{ goal.notes }}</mat-card-content>
                     <mat-card-content>{{ goal.deadline | date }}</mat-card-content>
                 </div>
                 <div class="goals-buttons-div">
-                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted($event)">done</mat-icon>
-                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal($event)">edit</mat-icon>
+                    <mat-icon [id]="goal.id" class="done-button" aria-label="Check" style="cursor: pointer;" (click)="goalCompleted(goal)">done</mat-icon>
+                    <mat-icon [id]="goal.id" class="edit-button" aria-label="Edit" style="cursor: pointer;" (click)="openEditGoalModal(goal)">edit</mat-icon>
                 </div>
             </mat-card>
         </div>
