--- a/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/goals.component.html
@@ -1,6 +1,11 @@
 <div class="goals-container">
-    <h1 class="goals-title">My Goals</h1>
-    <button>create goal button goes to the left of "My Goals" title</button>
+    <div class="header-container">
+        <h1 class="goals-title">My Goals</h1>
+        <button mat-icon-button matTooltip="Create a new goal" class="create-goal-button" aria-label="Add">
+            <mat-icon>add</mat-icon>
+          </button>
+    </div>
+
     <div class="goal-cards-container">
         <div *ngFor="let goal of shortTermGoals">
             <mat-card tabindex="0" class="short-term-goal-card goal-card">
