--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -1,1 +1,18 @@
-<p>create-goal works!</p>
+<form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
+    <h2>Create Goal</h2>
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" formControlName="title" id="title" placeholder="Enter title of goal" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="notes">Notes</label>
+      <textarea formControlName="notes" id="notes" placeholder="Enter notes" class="form-control"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="deadline">Deadline</label>
+      <input type="date" formControlName="deadline" id="deadline" class="form-control">
+    </div>
+    <mat-dialog-actions>
+      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
+    </mat-dialog-actions>
+</form>
