--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -13,6 +13,6 @@
       <input type="date" formControlName="deadline" id="deadline" class="form-control">
     </div>
     <mat-dialog-actions>
-      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Save Changes</button>
+      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Create</button>
     </mat-dialog-actions>
 </form>
