create form validation updates

--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.css
@@ -66,6 +66,16 @@ input[type="email"], input[type="password"], input[type="text"] {
     background-color: #e63946;
 }
 
+button:disabled {
+    background-color: #ccc;
+    color: #888;
+    cursor: not-allowed;
+}
+
+.btn-primary:hover:disabled {
+    background-color: #ccc;
+}
+
 @media (max-width: 400px) {
     form {
         width: 85%;
