--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
     <h2>Create Goal</h2>
     <div class="form-group">
       <label for="title">Title</label>
@@ -15,4 +15,36 @@
     <mat-dialog-actions>
       <button mat-button class="btn btn-primary" (submit)="onSubmit()">Create</button>
     </mat-dialog-actions>
+</form> -->
+
+<form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
+  <h2>Create Goal</h2>
+
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input type="text" formControlName="title" id="title" class="form-control">
+    <div *ngIf="goalForm.controls['title'].invalid && goalForm.controls['title'].touched" class="error-message">
+      <span>Title is required.</span>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="notes">Notes</label>
+    <textarea formControlName="notes" id="notes" class="form-control"></textarea>
+    <div *ngIf="goalForm.controls['notes'].invalid && goalForm.controls['notes'].touched" class="error-message">
+      <span>Notes are required.</span>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="deadline">Deadline</label>
+    <input type="date" formControlName="deadline" id="deadline" class="form-control">
+    <div *ngIf="goalForm.controls['deadline'].invalid && goalForm.controls['deadline'].touched" class="error-message">
+      <span>Deadline is required.</span>
+    </div>
+  </div>
+
+  <mat-dialog-actions>
+    <button mat-button [disabled]="!goalForm.touched || !this.goalForm.valid" class="btn btn-primary">Save Changes</button>
+  </mat-dialog-actions>
 </form>
