create goal client updates

--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -1,48 +1,39 @@
-<!-- <form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
-    <h2>Create Goal</h2>
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" formControlName="title" id="title" placeholder="Enter title of goal" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="notes">Notes</label>
-      <textarea formControlName="notes" id="notes" placeholder="Enter notes" class="form-control"></textarea>
-    </div>
-    <div class="form-group">
-      <label for="deadline">Deadline</label>
-      <input type="date" formControlName="deadline" id="deadline" class="form-control">
-    </div>
-    <mat-dialog-actions>
-      <button mat-button class="btn btn-primary" (submit)="onSubmit()">Create</button>
-    </mat-dialog-actions>
-</form> -->
-
 <form [formGroup]="goalForm" (ngSubmit)="onSubmit()">
   <h2>Create Goal</h2>
 
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input type="text" formControlName="title" id="title" class="form-control">
-    <div *ngIf="goalForm.controls['title'].invalid && goalForm.controls['title'].touched" class="error-message">
-      <span>Title is required.</span>
-    </div>
-  </div>
+  <mat-form-field>
+    <mat-label>Title</mat-label>
+    <input
+      matInput
+      placeholder="Your Title"
+      type="text"
+      formControlName="title"
+      id="title"
+    >
+    <mat-error>Title is required.</mat-error>
+  </mat-form-field>
 
-  <div class="form-group">
-    <label for="notes">Notes</label>
-    <textarea formControlName="notes" id="notes" class="form-control"></textarea>
-    <div *ngIf="goalForm.controls['notes'].invalid && goalForm.controls['notes'].touched" class="error-message">
-      <span>Notes are required.</span>
-    </div>
-  </div>
+  <mat-form-field>
+    <mat-label>Notes</mat-label>
+    <textarea
+      matInput
+      placeholder="Your Notes"
+      type="text"
+      formControlName="notes"
+      id="notes"
+    >
+    </textarea>
+    <mat-error>Notes are required.</mat-error>
+  </mat-form-field>
 
-  <div class="form-group">
-    <label for="deadline">Deadline</label>
-    <input type="date" formControlName="deadline" id="deadline" class="form-control">
-    <div *ngIf="goalForm.controls['deadline'].invalid && goalForm.controls['deadline'].touched" class="error-message">
-      <span>Deadline is required.</span>
-    </div>
-  </div>
+  <mat-form-field>
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker" formControlName="deadline">
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+    <mat-error>Use format MM/DD/YYYY.</mat-error>
+  </mat-form-field>
 
   <mat-dialog-actions>
     <button mat-button [disabled]="!goalForm.touched || !this.goalForm.valid" class="btn btn-primary">Save Changes</button>
