--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.css
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.css
@@ -41,13 +41,6 @@ label {
     color: #666;
 }
 
-input[type="email"], input[type="password"], input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
 ::placeholder {
     color: #aaa;
 }
@@ -64,6 +57,16 @@ input[type="email"], input[type="password"], input[type="text"] {
 
 .btn-primary:hover {
     background-color: #e63946;
+}
+
+button:disabled {
+    background-color: #ccc;
+    color: #888;
+    cursor: not-allowed;
+}
+
+.btn-primary:hover:disabled {
+    background-color: #ccc;
 }
 
 @media (max-width: 400px) {
