--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -33,7 +33,7 @@
 
   <mat-form-field>
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" formControlName="deadline">
+    <input matInput [matDatepicker]="picker" formControlName="deadline" [min]="minDate">
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
