use pristine and not touched

--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
@@ -36,6 +36,6 @@
   </mat-form-field>
 
   <mat-dialog-actions>
-    <button mat-button [disabled]="!goalForm.touched || !this.goalForm.valid" class="btn btn-primary">Save Changes</button>
+    <button mat-button [disabled]="goalForm.pristine || !this.goalForm.valid" class="btn btn-primary">Save Changes</button>
   </mat-dialog-actions>
 </form>
