--- a/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/create-goal/create-goal.component.html
@@ -41,6 +41,6 @@
   </mat-form-field>
 
   <mat-dialog-actions>
-    <button mat-button [disabled]="!goalForm.touched || !this.goalForm.valid" class="btn btn-primary">Submit</button>
+    <button mat-button [disabled]="goalForm.pristine || !this.goalForm.valid" class="btn btn-primary">Submit</button>
   </mat-dialog-actions>
 </form>
