--- a/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/goals/edit-goal/edit-goal.component.html
@@ -26,6 +26,11 @@
     <mat-error>Notes are required.</mat-error>
   </mat-form-field>
 
+  <!-- <mat-radio-group matInput formControlName="type">
+    <mat-radio-button value="short">Short-term</mat-radio-button>
+    <mat-radio-button value="long">Long-term</mat-radio-button>
+  </mat-radio-group> -->
+
   <mat-form-field>
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" formControlName="deadline">
