--- a/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
+++ b/frontend-fit-tracker/src/app/user-profile/user-profile.component.html
@@ -10,10 +10,9 @@
             <h3>Start date: {{ user.dateCreated | date: 'longDate' }}</h3>
             <h3>Goals Accomplished: {{ numberOfAccomplishedGoals }}</h3>
             <br/>
-            <button mat-raised-button (click)="openPreviousGoalModalDialog()" class="btn btn-primary">View Previous Goals</button>
+            <!-- <button mat-raised-button (click)="openPreviousGoalModalDialog()" class="btn btn-primary">View Previous Goals</button> -->
             <br/><br/>
             <button mat-raised-button (click)="openDeleteModalDialog()" class="btn btn-primary">Delete Account</button>
-            <!-- <button mat-raised-button (click)="openEditModalDialog()" class="btn btn-primary edit-button">bring to top rightEdit Details</button> -->
         </div>
 
         <div class="goals-div">  
