--- a/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
+++ b/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar">
-    <div class="navbar-brand">Fitness Tracker</div>
+    <div class="navbar-brand">Goal Tracker</div>
     <div class="navbar-links">
       <a routerLink="/" routerLinkActive="active">Home</a>
       <a routerLink="/profile" routerLinkActive="active">User Profile</a>
       <a routerLink="/log-activity" routerLinkActive="active">Log Activity</a>
+      <a routerLinkActive="active" (click)="logout()">Log out</a>
     </div>
 </nav>
