--- a/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
+++ b/frontend-fit-tracker/src/app/footer-and-navbar/navbar/navbar.component.html
@@ -2,8 +2,8 @@
     <div class="navbar-brand">Goal Tracker</div>
     <div class="navbar-links">
       <a routerLink="/" routerLinkActive="active">Home</a>
-      <a routerLink="/profile" routerLinkActive="active">User Profile</a>
+      <a routerLink="/user" routerLinkActive="active">User Profile</a>
       <a routerLink="/log-activity" routerLinkActive="active">Log Activity</a>
-      <a routerLinkActive="active" (click)="logout()">Log out</a>
+      <a routerLinkActive="active" (click)="logout()" style="cursor: pointer">Log out</a>
     </div>
 </nav>
