--- a/frontend-goal-tracker/src/app/login/login.component.html
+++ b/frontend-goal-tracker/src/app/login/login.component.html
@@ -11,5 +11,7 @@
         <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password">
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
+      <br/><br/>
+      <p class="register-text" (click)="register()">Register</p>
     </form>
 </div>
